wtf. js runs, no button shows up.

--- a/public/resgen_web.html
+++ b/public/resgen_web.html
@@ -6,6 +6,8 @@
       <meta name="pygwt:module" content="resgen_web">
       <link rel='stylesheet' href='resgen_web.css'>
       <title>resgen</title>
+      <script type="text/javascript" src="js/swfobject.js"></script> 
+      <script type="text/javascript" src="js/downloadify.min.js"></script> 
     </head>
     <body bgcolor="white">
         <pre>
